<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/list_item_product_name"
        android:layout_width="@dimen/null_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:maxLines="3"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/product_name_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
          app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Product name" />

    <TextView
        android:id="@+id/list_item_quantity"
        android:layout_width="@dimen/list_item_quantity_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/list_item_quantity_text"
        app:layout_constraintEnd_toStartOf="@+id/buttonSell"
        app:layout_constraintStart_toEndOf="@+id/list_item_product_price"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_item_product_price"
        android:layout_width="@dimen/list_item_product_price_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/list_item_product_price_text"
        app:layout_constraintBottom_toBottomOf="@+id/list_item_quantity"
        app:layout_constraintStart_toEndOf="@+id/list_item_product_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_item_product_price_value"
        android:layout_width="@dimen/null_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/product_name_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/list_item_product_price"
        app:layout_constraintStart_toStartOf="@+id/list_item_product_price"
        app:layout_constraintTop_toBottomOf="@+id/list_item_product_price"
        tools:text="@string/test_text_product_quantity" />


    <TextView
        android:id="@+id/list_item_quantity_value"
        android:layout_width="@dimen/null_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/quantity_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/list_item_quantity"
        app:layout_constraintStart_toStartOf="@+id/list_item_quantity"
        app:layout_constraintTop_toTopOf="@+id/list_item_product_price_value"
        tools:text="@string/quantity_test_text" />

    <Button
        android:id="@+id/buttonSell"
        android:layout_width="@dimen/sell_button_widht"
        android:layout_height="@dimen/sell_button_height"
        android:layout_marginEnd="@dimen/standard_margin"
        android:focusable="false"
        android:text="@string/sell_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />


</android.support.constraint.ConstraintLayout>